# libmpris2client

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  libmpris2client.pc.in  libmpris2client_0.1.0+git20150105.orig.tar.gz.delta  libmpris2client_0.1.0+git20150105.orig.tar.gz.id
debian/: changelog  control  copyright  libmpris2client-dev.install  libmpris2client0.symbols  libmprisclient0.install  mpris2-status-icon.1  mpris2-status-icon.manpages  rules  watch
docs/: Makefile.am  libmpris2client-docs.xml  libmpris2client-sections.txt  libmpris2client.types
src/: Makefile.am  libmpris2client.c  libmpris2client.h  mpris2-metadata.c
status-icon/: Makefile.am  mpris2-album-art.c  mpris2-album-art.h  mpris2-status-icon.c
