SUBDIRS = \
	src   \
	status-icon

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libmpris2client.pc
CLEANFILES = libmpris2client.pc

#EXTRA_DIST = \
#	intltool-extract.in \
#	intltool-merge.in \
#	intltool-update.in

#DISTCLEANFILES = \
#	intltool-extract \
#	intltool-merge \
#	intltool-update

#DISTCHECK_CONFIGURE_FLAGS = \
#	--enable-gtk-doc
